Various renaming, refactoring. A couple of fixes as well.